--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
+
+<script
+src='//fw-cdn.com/10810849/3591604.js'
+chat='true'>
+</script>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -183,20 +189,5 @@
     </div>
 
     <script src="dist/js/main.min.js"></script>
-
-	<script>
-		function initFreshChat() {
-		  window.fcWidget.init({
-				 token: "6ebb66e3-39ac-4bfc-8a1a-b6ac7a676fd5",
-		   host: "https://leadtracker.freshchat.com"
-		  });
-		}
-		function initialize(i,t){var e;i.getElementById(t)?
-		initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
-		e.src="https://leadtracker.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
-		function initiateCall(){initialize(document,"Freshchat-js-sdk")}
-		window.addEventListener?window.addEventListener("load",initiateCall,!1):
-		window.attachEvent("load",initiateCall,!1);
-	  </script>
 </body>
 </html>
