Update index.html - abrir chat no botão

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-
+<html lang="pt-br" class="no-js">
+<script>
+  window.fcWidgetMessengerConfig = {
+    config: {
+      headerProperty:{
+        hideChatButton: true,
+      }
+    }
+  }
+</script>
+	
 <script
 src='//fw-cdn.com/10810849/3591604.js'
 chat='true'>
@@ -43,7 +52,7 @@ chat='true'>
 	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
 	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+								<button class="button button-primary button-wide-mobile" onClick="window.fcWidget.open();">Abrir chat</button>
 							</div>
 						</div>
 						<div class="mockup-container">
