--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   window.fcWidgetMessengerConfig = {
     config: {
       headerProperty:{
-        hideChatButton: true,
+        hideChatButton: false,
       }
     }
   }
